@@ -1,3 +1,14 @@
+2008-04-16  Tristan Van Berkom <tvb@gnome.org>
+
+	* gtk/gtkwindow.c: Chain up in buildable_finish()
+
+	* gtk/gtkbuilder.c: _gtk_builder_get_absolute_filename() handle
+	cases where g_path_get_dirname() returns "."
+
+	* docs/reference/gtk/tmpl/gtklabel.sgml, 
+	docs/reference/gtk/tmpl/gtkbuilder.sgml: Added documentation
+	for the <attributes> tags on GtkLabel
+
 2008-04-15  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gtk/gtkrecentmanager.c:
